--- a/VlimsWeb/ClientApp/src/app/add-document-template-config/add-document-template-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-template-config/add-document-template-config.component.html
@@ -1,1 +1,136 @@
-<p>add-document-template-config works!</p>
+<div class="card shadow mb-4" style="padding-top: 2px;">
+    <div class="card-header py-3">
+        <div col-12 style="float: left;">
+        <h6 class="m-0 font-weight-bold text-primary">Add Document Template Configuration</h6>
+    </div>
+
+    </div>
+    <div class="card-body">
+    <form (ngSubmit)="submit(newdoctemplate)" #fm="ngForm">
+        <div class="modal-body">
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">Template Name</label>
+        
+        <div class="col-sm-8">
+            <input type="text" class="form-control" id="BrandName" [(ngModel)]="newdoctemplate.Templatename"
+              pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Template Name"
+              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">Unique Code</label>
+        
+        <div class="col-sm-8">
+            <input type="text" class="form-control" id="BrandName" [(ngModel)]="newdoctemplate.Uniquecode"
+              pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Unique Code"
+              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
+        
+        <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="newdoctemplate.Documenttype" name="typeId" #DTCId="ngModel"
+            [ngClass]="{ 'is-invalid': fm.submitted && DTCId.invalid }" required>
+            <option [ngValue]=null>Select</option>
+            <option *ngFor="let type of doctypes" value={{type.Documenttypename}}>{{type?.Documenttypename}}</option>
+          </select>
+
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-12 col-form-label" style="text-align: center;">Header</label>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Rows</label>
+        
+            <div class="col-sm-3">
+                  <select class="form-control" [(ngModel)]="newdoctemplate.rows" name="typeId" #typeId="ngModel"
+                  [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+                  <option value=""  >Select</option>
+                  <option value="1" >1</option>
+                  <option value="2" >2</option>
+                  <option value="3" >3</option>
+                  <option value="4" >4</option>
+                  <option value="5" >5</option>
+                  <option value="6" >6</option>
+                  <option value="7" >7</option>
+                  <option value="8" >8</option>
+                  <option value="9" >9</option>
+                  <option value="10" >10</option>
+                </select>
+                </div>
+                <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Columns</label>
+                <div class="col-sm-3">
+                    <select class="form-control" [(ngModel)]="newdoctemplate.columns" name="typeId" #typeId="ngModel"
+                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+                    <option value=""  >Select</option>
+                  <option value="1" >1</option>
+                  <option value="2" >2</option>
+                  <option value="3" >3</option>
+                  <option value="4" >4</option>
+                  <option value="5" >5</option>
+                  <option value="6" >6</option>
+                  <option value="7" >7</option>
+                  <option value="8" >8</option>
+                  <option value="9" >9</option>
+                  <option value="10" >10</option>
+                  </select>
+                  </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-12 col-form-label" style="text-align: center;">Footer</label>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Rows</label>
+        
+            <div class="col-sm-3">
+                  <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
+                  [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+                  <option value=""  >Select</option>
+                  <option value="1" >1</option>
+                  <option value="2" >2</option>
+                  <option value="3" >3</option>
+                  <option value="4" >4</option>
+                  <option value="5" >5</option>
+                  <option value="6" >6</option>
+                  <option value="7" >7</option>
+                  <option value="8" >8</option>
+                  <option value="9" >9</option>
+                  <option value="10" >10</option>
+                </select>
+                </div>
+                <label for="BrandName" class="col-sm-3 col-form-label" style="text-align: center;">Columns</label>
+                <div class="col-sm-3">
+                    <select class="form-control" [(ngModel)]="newdoctemplate.footercolumns" name="typeId" #typeId="ngModel"
+                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+                    <option value=""  >Select</option>
+                    <option value="1" >1</option>
+                    <option value="2" >2</option>
+                    <option value="3" >3</option>
+                    <option value="4" >4</option>
+                    <option value="5" >5</option>
+                    <option value="6" >6</option>
+                    <option value="7" >7</option>
+                    <option value="8" >8</option>
+                    <option value="9" >9</option>
+                    <option value="10" >10</option>
+                  </select>
+                  </div>
+          </div>
+          
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </div>
+</div>
