--- a/VlimsWeb/ClientApp/src/app/add-workflow-config/add-workflow-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-workflow-config/add-workflow-config.component.html
@@ -1,1 +1,98 @@
-<p>add-workflow-config works!</p>
+<div class="card shadow mb-4" style="padding-top: 2px;">
+    <div class="card-header py-3">
+        <div col-12 style="float: left;">
+        <h6 class="m-0 font-weight-bold text-primary">Add Workflow Configuration</h6>
+    </div>
+
+    </div>
+    <div class="card-body">
+    <form (ngSubmit)="submit(addworkflow)" #fm="ngForm">
+        <div class="modal-body">
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">Document Stage</label>
+        
+        <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="addworkflow.documentstage" name="typeId" #typeId="ngModel"
+            [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+            <option value="Select"  >Select</option>
+                  <option value="Preparation" >Preparation</option>
+                  <option value="Validating" >Validating</option>
+                  <option value="Excuting" >Excuting</option>
+                  <option value="Approval" >Approval</option>
+          </select>
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
+        
+        <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="addworkflow.documenttype" name="typeId" #DTCId="ngModel"
+            [ngClass]="{ 'is-invalid': fm.submitted && DTCId.invalid }" required>
+            <option [ngValue]=null>Select</option>
+            <option *ngFor="let type of doctypes" value={{type.Documenttypename}}>{{type?.Documenttypename}}</option>
+          </select>
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">Department</label>
+        
+        <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="addworkflow.department" name="typeId" #typeId="ngModel"
+            [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+            <option value="Select"  >Select</option>
+                  <option value="QA" >QA</option>
+                  <option value="QC" >QC</option>
+                  <option value="PRD" >PRD</option>
+                  <option value="ENG" >ENG</option>
+          </select>
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">No. of Reviews</label>
+        
+        <div class="col-sm-8">
+            <!-- <select class="form-control" [(ngModel)]="adddoc.Assigntodepartment" name="typeId" #typeId="ngModel"
+            [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+            <option value="Select"  >Select</option>
+                  <option value="QA" >manoj</option>
+                  <option value="QC" >jaswanth</option>
+                  <option value="PRD" >chandra</option>
+                  <option value="ENG" >bhuvana</option>
+                  <option value="ENG" >rashmitha</option>
+          </select> -->
+          <input type="number" class="form-control" id="BrandName" [(ngModel)]="addworkflow.reviewsCount"
+                  pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder=""
+                  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            </div>
+          </div>
+          <div class="form-group row">
+           
+            <label for="BrandName" class="col-sm-4 col-form-label">No. of Approvals</label>
+        
+        <div class="col-sm-8">
+            <!-- <select class="form-control" [(ngModel)]="adddoc.Assigntodepartment" name="typeId" #typeId="ngModel"
+            [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+            <option value="Select"  >Select</option>
+            <option value="QA" >manoj</option>
+            <option value="QC" >jaswanth</option>
+            <option value="PRD" >chandra</option>
+            <option value="ENG" >bhuvana</option>
+            <option value="ENG" >rashmitha</option>
+          </select> -->
+          <input type="number" class="form-control" id="BrandName" [(ngModel)]="addworkflow.approvalsCount"
+                  pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder=""
+                  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+      </form>
+    </div>
+</div>
