--- a/VlimsWeb/ClientApp/src/app/document-request/document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-request/document-request.component.html
@@ -13,7 +13,7 @@
   <div class="card-body">
 
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0">
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="requests?.length>   0">
 
         <thead>
           <tr>
@@ -27,10 +27,10 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let doc of types; let i=index">
+          <tr *ngFor="let doc of requests; let i=index">
             <th scope="row">{{i+1}}</th>
-            <td>{{doc?.Documenttypename}}</td>
-            <td>{{doc?.documenttypeprefix}}</td>
+            <td>{{doc?.documenttype}}</td>
+            <td>{{doc?.department}}</td>           
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate}}</td>
             <td>"Success"</td>
@@ -48,7 +48,7 @@
 
     </div>
 
-    <div *ngIf="types?.length==0">
+    <div *ngIf="requests?.length==0">
       <p>No items to display</p>
     </div>
   </div>
