--- a/VlimsWeb/ClientApp/src/app/document-request/document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-request/document-request.component.html
@@ -31,8 +31,8 @@
             <th scope="row">{{i+1}}</th>
             <td>{{doc?.documenttype}}</td>
             <td>{{doc?.department}}</td>           
-            <td>{{doc?.ModifiedBy}}</td>
-            <td>{{doc?.ModifiedDate}}</td>
+            <td>{{doc?.CreatedBy}}</td>
+            <td>{{doc?.CreatedDate}}</td>
             <td>"Success"</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
