--- a/VlimsWeb/ClientApp/src/app/document-additionaltasks/document-additionaltasks.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-additionaltasks/document-additionaltasks.component.html
@@ -13,7 +13,7 @@
   <div class="card-body">
 
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0">
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="requests?.length>   0">
 
         <thead>
           <tr>
@@ -24,17 +24,18 @@
             <th scope="col">Department</th>
             <th scope="col">Effective Date</th>
             <th scope="col">Review Date</th>
-            <th scope="col">Registered By</th>
-            <th scope="col">Registered On</th>
+            
             <th scope="col">Status</th>
             <th scope="col">Actions</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let doc of types; let i=index">
+          <tr *ngFor="let doc of requests; let i=index">
             <th scope="row">{{i+1}}</th>
+            <td>{{doc?.Documenttitle}}</td>
+            <td>{{doc?.DocumentNo}}</td>
             <td>{{doc?.Documenttypename}}</td>
-            <td>{{doc?.documenttypeprefix}}</td>
+            <td>{{doc?.Department}}</td>
             <td>{{doc?.ModifiedBy}}</td>
             <td>{{doc?.ModifiedDate}}</td>
             <td>"Success"</td>
@@ -52,7 +53,7 @@
 
     </div>
 
-    <div *ngIf="types?.length==0">
+    <div *ngIf="requests?.length==0">
       <p>No items to display</p>
     </div>
   </div>
