--- a/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
@@ -13,7 +13,7 @@
   <div class="card-body">
 
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0">
+      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="requests?.length>   0">
 
         <thead>
           <tr>
@@ -28,13 +28,15 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let doc of types; let i=index">
+          <tr *ngFor="let doc of requests; let i=index">
             <th scope="row">{{i+1}}</th>
-            <td>{{doc?.Documenttypename}}</td>
-            <td>{{doc?.documenttypeprefix}}</td>
-            <td>{{doc?.ModifiedBy}}</td>
-            <td>{{doc?.ModifiedDate}}</td>
+            <td>{{doc?.documenttitle}}</td>
+            <td>{{doc?.documentno}}</td>
+            <td>{{doc?.documenttype}}</td>
+            <td>{{doc?.department}}</td>
+            <td>{{doc?.document}}</td>
             <td>"Success"</td>
+            
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
