--- a/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
@@ -6,75 +6,68 @@
 
   </div>
   <div class="card-body">
-    <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
+    <form (ngSubmit)="submit(adddocreq)" #fm="ngForm">
       <div class="modal-body">
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document Type Name</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddoc.Documenttypename"
+            <!--<input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.Documenttypename"
                    pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Document Type Name"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
+
+            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="typeId" #typeId="ngModel"
+                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+              <option [ngValue]=null>Select</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">SOP</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">Annexure</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">Format</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">Specification</option>
+            </select>
           </div>
         </div>
-        <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document Type Prefix</label>
-
-          <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddoc.documenttypeprefix"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Document Prefix Name"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
-          </div>
-        </div>
-        <div class="form-group row">
-
-          <label for="BrandName" class="col-sm-4 col-form-label">Description</label>
-
-          <div class="col-sm-8">
-            <input type="textbox" class="form-control" id="BrandName" [(ngModel)]="adddoc.Description"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Description"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
-          </div>
-        </div>
         <div class="form-group row">
 
           <label for="BrandName" class="col-sm-4 col-form-label">Assign to Department</label>
 
           <div class="col-sm-8">
-            <!-- <select  class="form-control select" multiple data-live-search="true">
-                <option value="1">One</option>
-                <option value="2">Two</option>
-                <option value="3">Three</option>
-                <option value="4">Four</option>
-                <option value="5">Five</option>
-                <option value="6">Six</option>
-                <option value="7">Seven</option>
-                <option value="8">Eight</option>
-              </select> -->
-            <select class="form-control" [(ngModel)]="adddoc.Assigntodepartment" name="typeId" #typeId="ngModel"
+
+            <select class="form-control" [(ngModel)]="adddocreq.department" name="typeId" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
               <option [ngValue]=null>Select</option>
-              <option [ngValue]="QA" [(ngModel)]="adddoc.Assigntodepartment">QA</option>
-              <option [ngValue]="QA" [(ngModel)]="adddoc.Assigntodepartment">QC</option>
-              <option [ngValue]="QA" [(ngModel)]="adddoc.Assigntodepartment">PRD</option>
-              <option [ngValue]="QA" [(ngModel)]="adddoc.Assigntodepartment">ENG</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">QA</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">QC</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">PRD</option>
+              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">ENG</option>
             </select>
-            <!-- <input type="text" class="form-control" id="BrandName" [(ngModel)]="newBrand.BrandName"
-              pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Brand Name"
-              #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required /> -->
+
           </div>
-          <!-- <div class="form-group col-xs-12 col-xl-6 col-md-12 pull-right">
-              <label for="exampleInputEmail1">Select Type</label>
-              <select class="form-control" [(ngModel)]="newobj.TypeId" name="typeId" #typeId="ngModel"
-                [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
-                <option [ngValue]=null>Select</option>
-                <option [ngValue]="QA">QA</option>
-                <option *ngFor="let type of ptypes" value={{type.TypeId}}>{{type.Name}}</option>
-              </select>
-            </div> -->
+
         </div>
+
+        <div class="form-group row">
+
+          <label for="BrandName" class="col-sm-4 col-form-label">Purpose</label>
+
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.Purpose"
+                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Purpose"
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+          </div>
+        </div>
+        <div class="form-group row">
+
+          <label for="BrandName" class="col-sm-4 col-form-label">No.Of Approvals</label>
+
+          <div class="col-sm-8">
+            <input type="number" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
+                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Approvals Count"
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+          </div>
+        </div>
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
