--- a/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
+++ b/VlimsWeb/ClientApp/src/app/UserManagement/mainpage.html
@@ -45,20 +45,36 @@
           <i class="fas fa-fw fa-tachometer-alt"></i>
           <span>Dashboard</span></a>
       </li> -->
-      <li class="nav-item">
-        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
-            aria-expanded="true" aria-controls="collapseTwo">
-            <i class="fas fa-fw fa-cog"></i>
-            <span>DMS</span>
-        </a>
-        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
-            <div class="bg-white py-2 collapse-inner rounded">
-                <h6 class="collapse-header">DMS:</h6>
-                <a class="collapse-item" [routerLink]="['/mainpage/documentmaster']">Document Master</a>
-                <a class="collapse-item" [routerLink]="['/mainpage/documentmaster']">Document Manager</a>
-            </div>
+
+    <li class="nav-item">
+      <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+          aria-expanded="true" aria-controls="collapseTwo">
+          <i class="fa fa-user"></i>
+          <span>Admin</span>
+      </a>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Security Management</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Hierarchy Management</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Plant Management</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/users']">User Management</a>
+              <a class="collapse-item" [routerLink]="['/mainpage/hierarchy']">Approval Configurations</a>
+          </div>
+      </div>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo"
+        aria-expanded="true" aria-controls="collapseTwo">
+        <i class="fas fa-fw fa-cog"></i>
+        <span>DMS</span>
+    </a>
+    <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+        <div class="bg-white py-2 collapse-inner rounded">
+            <a class="collapse-item" [routerLink]="['/mainpage/documentmaster']">Document Master</a>
+            <a class="collapse-item" [routerLink]="['/mainpage/documentmaster']">Document Manager</a>
         </div>
-    </li>
+    </div>
+</li>
       <!-- <li class="nav-item" [ngClass]="{'active':tabselect==='documentmaster'}">
         <a class="nav-link" (click)="navLinkClick('mainpage')"  [routerLink]="['/mainpage/documentmaster']">
           <i class="fa fa-file"></i>
