--- a/VlimsWeb/ClientApp/src/app/department/department.component.html
+++ b/VlimsWeb/ClientApp/src/app/department/department.component.html
@@ -5,7 +5,7 @@
         <h6 class="m-0 font-weight-bold text-primary">Department Configuration</h6>
     </div>
     <div col-6 style="float: right;">
-        <button class="btn btn-primary"  type="button" [routerLink]="['/mainpage/documentmaster/addworkflow']"
+        <button class="btn btn-primary"  type="button" [routerLink]="['/mainpage/hierarchy/adddept']"
       >Add</button>
     </div>
     </div>
@@ -29,9 +29,9 @@
       <tbody>
         <tr *ngFor="let doc of types; let i=index">
           <th scope="row">{{i+1}}</th>
-          <td>{{doc?.documentstage}}</td>
-          <td>{{doc?.documenttype}}</td>
-          <td>{{doc?.department}}</td>
+          <td>{{doc?.DepartmentName}}</td>
+          <td>{{doc?.DepartmentCode }}</td>
+          <td>{{doc?.Comments}}</td>
           <td>{{doc?.ModifiedBy}}</td>
           <td>{{doc?.ModifiedDate}}</td>
           <td>"Success"</td>
