--- a/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
@@ -17,7 +17,7 @@
 
         <thead>
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">S.No</th>
             <th scope="col">Document Title</th>
             <th scope="col">Document No</th>
             <th scope="col">Document Type</th>
@@ -29,7 +29,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let doc of requests; let i=index">
-            <th scope="row">{{i+1}}</th>
+            <th> {{i+1}}</th>
             <td>{{doc?.documenttitle}}</td>
             <td>{{doc?.documentno}}</td>
             <td>{{doc?.documenttype}}</td>
