--- a/VlimsWeb/ClientApp/src/app/document-preperation/document-preperation.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-preperation/document-preperation.component.html
@@ -17,7 +17,7 @@
 
         <thead>
           <tr>
-            <th scope="col">#</th>
+            <th scope="col">S.No</th>
             <th scope="col">Document Type</th>
             <th scope="col">Department</th>           
             <th scope="col">Assigned to Group</th>
@@ -31,13 +31,13 @@
             <td>{{doc?.documenttype}}</td>
             <td>{{doc?.department}}</td>          
             <td>{{doc?.template}}</td>            
-            <td>"Success"</td>
+            <td>Success</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
-                <span class="fa fa-flag fa-wrench"></span>
+                      <span class="fa fa-edit"></span>
               </button>
-              <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button>
+              <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
             </td>
           </tr>
         </tbody>
