--- a/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
+++ b/VlimsWeb/ClientApp/src/app/user-configuration/user-configuration.component.html
@@ -16,7 +16,7 @@
        
       <thead>
         <tr>
-          <th scope="col">#</th>
+          <th scope="col">S.No</th>
           <th scope="col">First Name</th>
           <th scope="col">Last Name</th>
           <th scope="col">User ID</th>
@@ -30,7 +30,7 @@
       </thead>
       <tbody>
         <tr *ngFor="let doc of types; let i=index">
-          <th scope="row">{{i+1}}</th>
+          <th>{{i+1}}</th>
           <td>{{doc?.FirstName}}</td>
           <td>{{doc?.LastName}}</td>
           <td>{{doc?.UserID}}</td>
@@ -38,12 +38,12 @@
           <td>{{doc?.Role}}</td>
           <td>{{doc?.Empid}}</td>
           <td>{{doc?.EmailId}}</td>
-          <td>"Success"</td>
+          <td>Success</td>
           <td>
             <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
               data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
-                class="fa fa-flag fa-wrench"></span> </button>
-            <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button>
+                class="fa fa-edit"></span> </button>
+            <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
           </td>
         </tr>
       </tbody>
