--- a/VlimsWeb/ClientApp/src/app/workflow-config/workflow-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/workflow-config/workflow-config.component.html
@@ -16,7 +16,7 @@
        
       <thead>
         <tr>
-          <th scope="col">#</th>
+          <th scope="col">S.No</th>
           <th scope="col">Document Stage</th>
           <th scope="col">Document Type</th>
           <th scope="col">Department</th>
@@ -28,18 +28,18 @@
       </thead>
       <tbody>
         <tr *ngFor="let doc of types; let i=index">
-          <th scope="row">{{i+1}}</th>
+          <th>{{i+1}}</th>
           <td>{{doc?.documentstage}}</td>
           <td>{{doc?.documenttype}}</td>
           <td>{{doc?.department}}</td>
           <td>{{doc?.ModifiedBy}}</td>
-          <td>{{doc?.ModifiedDate}}</td>
-          <td>"Success"</td>
+          <td>{{doc?.ModifiedDate  | date}}</td>
+          <td>Success</td>
           <td>
             <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
               data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);"> <span
-                class="fa fa-flag fa-wrench"></span> </button>
-            <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button>
+                class="fa fa-edit"></span> </button>
+            <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
           </td>
         </tr>
       </tbody>
