--- a/VlimsWeb/ClientApp/src/app/document-additionaltasks/document-additionaltasks.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-additionaltasks/document-additionaltasks.component.html
@@ -5,7 +5,7 @@
       <h6 class="m-0 font-weight-bold text-primary">Document Revison</h6>
     </div>
     <div col-6 style="float: right;">
-      <button class="btn btn-primary" type="button" [routerLink]="['/mainpage/documentmaster/adddoctype']">
+      <button class="btn btn-primary" type="button" hidden="hidden" [routerLink]="['/mainpage/documentmaster/adddoctype']">
         Add
       </button>
     </div>
