--- a/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
@@ -5,12 +5,12 @@
       <h6 class="m-0 font-weight-bold text-primary">Document Request</h6>
     </div>
     <div col-6 style="float: right;">
-      <button class="btn btn-primary" type="button" [routerLink]="['/mainpage/documentmaster/adddoctype']">
+      <button class="btn btn-primary" type="button" hidden="hidden" [routerLink]="['/mainpage/documentmaster/adddoctype']">
         Add
       </button>
     </div>
   </div>
-  <div class="card-body">
+  <div class="card-body"> 
 
     <div class="table-responsive">
       <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="requests?.length>   0">
@@ -38,11 +38,7 @@
             <td>"Success"</td>
             
             <td>
-              <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
-                      data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
-                <span class="fa fa-flag fa-wrench"></span>
-              </button>
-              <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button>
+              <span class="fa fa-edit"></span>
             </td>
           </tr>
         </tbody>
