--- a/VlimsWeb/ClientApp/src/app/document-template-config/document-template-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-template-config/document-template-config.component.html
@@ -38,11 +38,11 @@
 
             <td>Success</td>
             <td>
-              <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
+              <!--<button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
                 <span class="fa fa-flag fa-wrench"></span>
-              </button>
-              <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button>
+              </button>-->
+              <button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
             </td>
           </tr>
         </tbody>
