--- a/VlimsWeb/ClientApp/src/app/document-preperation/document-preperation.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-preperation/document-preperation.component.html
@@ -35,7 +35,7 @@
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
-                      <span class="fa fa-edit"></span>
+                <span class="fa fa-edit" [routerLink]="['/mainpage/documentmanager/documenprepadd']"></span>
               </button>
               <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
             </td>
