--- a/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
+++ b/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
@@ -10,8 +10,8 @@
       <div class="modal-body">
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document Title</label>
-          <div class="col-sm-8">            
+          <label for="BrandName" class="col-sm-4 col-form-label">Document Title :</label>
+          <div class="col-sm-8">
             <input type="text" class="form-control" id="DocumentName" [(ngModel)]="adddocreq.DocumentTitle"
                    pattern='[A-Za-z\\s]*' name="DocumentName" aria-describedby="productname" placeholder="DocumentTitle"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
@@ -20,7 +20,7 @@
 
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document No</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Document No :</label>
 
           <div class="col-sm-8">
 
@@ -34,17 +34,17 @@
 
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Document Type :</label>
 
           <div class="col-sm-8">
             <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.Purpose"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Purpose"
+                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Document Type"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Department</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Department :</label>
 
           <div class="col-sm-8">
             <input type="number" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
@@ -54,49 +54,51 @@
         </div>
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Document :</label>
 
           <div class="col-sm-8">
-            <input type="number" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Approvals Count"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
+            <input type="file" class="form-control" id="Document" [(ngModel)]="adddocreq.ApprovalsCount"
+                   name="Document" aria-describedby="productname" placeholder="Document"
+                   #BrandName="ngModel" />
           </div>
         </div>
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Template</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Template :</label>
 
           <div class="col-sm-8">
             <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
-              <option value="">Select</option>        
+              <option value="">Select</option>
             </select>
           </div>
         </div>
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Workflow</label>
-
-          <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
-                  [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
-            <option value="">Select</option>
-          </select>
+          <label for="BrandName" class="col-sm-4 col-form-label">Workflow :</label>
+          <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
+                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+              <option value="">Select</option>
+            </select>
+          </div>
         </div>
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Details</label>
+          <label for="BrandName" class="col-sm-4 col-form-label">Details :</label>
 
           <div class="col-sm-8">
-            <input type="number" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Approvals Count"
+            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
+                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Details"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
       </div>
       <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Submit</button>
         <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
         <button type="button" class="btn btn-secondary" (click)="closepopup();">Preview</button>
-        <button type="submit" class="btn btn-primary">Submit</button>
+
       </div>
     </form>
   </div>
