Updated Changes in Document Manager

--- a/VlimsWeb/ClientApp/src/app/document-request/document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-request/document-request.component.html
@@ -40,7 +40,7 @@
             <td>{{doc?.status}}</td>
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
-                      data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
+                      data-backdrop="static" data-keyboard="false" (click)="editdocreq(doc);">
                 <span class="fa fa-edit"></span>
               </button>
               <!-- <button class="btn"> <span class="fa fa-flag fa-trash" (click)="deleteBrand(i,doc);"></span></button> -->
