--- a/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
+++ b/VlimsWeb/ClientApp/src/app/documentprep-add/documentprep-add.component.html
@@ -37,8 +37,8 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Document Type :</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.Purpose"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Document Type"
+            <input type="text" class="form-control" id="DocType" [(ngModel)]="adddocreq.documenttype"
+                   pattern='[A-Za-z\\s]*' name="DocType" aria-describedby="productname" placeholder="Document Type"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
@@ -47,8 +47,8 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Department :</label>
 
           <div class="col-sm-8">
-            <input type="number" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Approvals Count"
+            <input type="text" class="form-control" id="Department" [(ngModel)]="adddocreq.department"
+                   pattern='[A-Za-z\\s]*' name="Department" aria-describedby="productname" placeholder="Department"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
@@ -57,7 +57,7 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Document :</label>
 
           <div class="col-sm-8">
-            <input type="file" class="form-control" id="Document" [(ngModel)]="adddocreq.ApprovalsCount"
+            <input type="file" class="form-control" id="Document" [(ngModel)]="adddocreq.Document"
                    name="Document" aria-describedby="productname" placeholder="Document"
                    #BrandName="ngModel" />
           </div>
@@ -67,9 +67,11 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Template :</label>
 
           <div class="col-sm-8">
-            <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.Template" name="typeId" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
+              <!--templates-->
               <option value="">Select</option>
+              <option *ngFor="let type of templates" value={{type.Templatename}}>{{type.Templatename}}</option>
             </select>
           </div>
         </div>
@@ -77,9 +79,10 @@
 
           <label for="BrandName" class="col-sm-4 col-form-label">Workflow :</label>
           <div class="col-sm-8">
-            <select class="form-control" [(ngModel)]="newdoctemplate.footerrows" name="typeId" #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.Workflow" name="typeId" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
               <option value="">Select</option>
+              <option *ngFor="let type of workflowTypes" value={{type.documentstage}}>{{type.documentstage}}</option>              
             </select>
           </div>
         </div>
@@ -88,7 +91,7 @@
           <label for="BrandName" class="col-sm-4 col-form-label">Details :</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
+            <input type="text"  class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
                    pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Details"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
