--- a/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
@@ -10,37 +10,34 @@
       <div class="modal-body">
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Document Type</label>
+          <label for="documenttype" class="col-sm-4 col-form-label">Document Type</label>
 
           <div class="col-sm-8">
-            <!--<input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.Documenttypename"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Enter Document Type Name"
-                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />-->
 
-            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="typeId" #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="documenttype" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
               <option [ngValue]=null>Select</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">SOP</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">Annexure</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">Format</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.documenttype">Specification</option>
+              <option [ngValue]="QA">SOP</option>
+              <option [ngValue]="QA">Annexure</option>
+              <option [ngValue]="QA">Format</option>
+              <option [ngValue]="QA">Specification</option>
             </select>
           </div>
         </div>
 
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Assign to Department</label>
+          <label for="department" class="col-sm-4 col-form-label">Assign to Department</label>
 
           <div class="col-sm-8">
 
-            <select class="form-control" [(ngModel)]="adddocreq.department" name="typeId" #typeId="ngModel"
+            <select class="form-control" [(ngModel)]="adddocreq.department" name="department" #typeId="ngModel"
                     [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
               <option [ngValue]=null>Select</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">QA</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">QC</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">PRD</option>
-              <option [ngValue]="QA" [(ngModel)]="adddocreq.department">ENG</option>
+              <option [ngValue]="QA">QA</option>
+              <option [ngValue]="QA">QC</option>
+              <option [ngValue]="QA">PRD</option>
+              <option [ngValue]="QA">ENG</option>
             </select>
 
           </div>
@@ -49,21 +46,21 @@
 
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">Purpose</label>
+          <label for="purpose" class="col-sm-4 col-form-label">Purpose</label>
 
           <div class="col-sm-8">
-            <input type="text" class="form-control" id="BrandName" [(ngModel)]="adddocreq.Purpose"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Purpose"
+            <input type="text" class="form-control" id="purpose" [(ngModel)]="adddocreq.purpose"
+                   pattern='[A-Za-z\\s]*' name="purpose" aria-describedby="productname" placeholder="purpose"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
         <div class="form-group row">
 
-          <label for="BrandName" class="col-sm-4 col-form-label">No.Of Approvals</label>
+          <label for="approvalsCount" class="col-sm-4 col-form-label">No.Of Approvals</label>
 
           <div class="col-sm-8">
-            <input type="number" class="form-control" id="BrandName" [(ngModel)]="adddocreq.ApprovalsCount"
-                   pattern='[A-Za-z\\s]*' name="BrandName" aria-describedby="productname" placeholder="Approvals Count"
+            <input type="number" class="form-control" id="approvalsCount" [(ngModel)]="adddocreq.approvalsCount"
+                   pattern='[A-Za-z\\s]*' name="approvalsCount" aria-describedby="productname" placeholder="Approvals Count"
                    #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && BrandName.invalid }" required />
           </div>
         </div>
