--- a/VlimsWeb/ClientApp/src/app/add-document-type-config/add-document-type-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-type-config/add-document-type-config.component.html
@@ -1,65 +1,65 @@
 <div class="card shadow mb-4" style="padding-top: 2px;">
-        <div class="card-header py-3">
-            <div col-12 style="float: left;">
-            <h6 class="m-0 font-weight-bold text-primary">{{title}}</h6>
+  <div class="card-header py-3">
+    <div col-12 style="float: left;">
+      <h6 class="m-0 font-weight-bold text-primary">{{title}}</h6>
+    </div>
+
+  </div>
+  <div class="card-body">
+    <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
+      <div class="modal-body">
+        <div class="form-group row">
+
+          <label for="DocumentType" class="col-sm-4 col-form-label">Document Type Name</label>
+
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="DocumentTypeName" [(ngModel)]="adddoc.Documenttypename" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+                   pattern='[A-Za-z\\s]*' name="DocumentTypeName" aria-describedby="productname" placeholder="Enter Document Type Name"
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && DocumentTypeName.invalid }" required />
+          </div>
         </div>
+        <div class="form-group row">
+
+          <label for="DocumentTypePrefix" class="col-sm-4 col-form-label">Document Type Prefix</label>
+
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="DocumentTypePrefix" [(ngModel)]="adddoc.documenttypeprefix" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+                   pattern='[A-Za-z\\s]*' name="DocumentTypePrefix" aria-describedby="productname" placeholder="Enter Document Prefix Name"
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && DocumentTypePrefix.invalid }" required />
+          </div>
+        </div>
+        <div class="form-group row">
+
+          <label for="Description" class="col-sm-4 col-form-label">Description</label>
+
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="Description" [(ngModel)]="adddoc.Description" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+                   pattern='[A-Za-z\\s]*' name="Description" aria-describedby="productname" placeholder="Enter Description"
+                   #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && Description.invalid }" required />
+          </div>
+        </div>
+        <div class="form-group row">
+
+          <label for="Assigntodepartment" class="col-sm-4 col-form-label">Assign to Department</label>
+
+          <div class="col-sm-8">
+            <select class="form-control" [(ngModel)]="adddoc.Assigntodepartment" name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
+                    [ngClass]="{ 'is-invalid': fm.submitted && Assigntodepartment.invalid }" required>
+              <option value="Select">Select</option>
+              <option *ngFor="let type of departs" value={{type.DepartmentName}}>{{type?.DepartmentName}}</option>
+            </select>
+
+          </div>
 
         </div>
-        <div class="card-body">
-        <form (ngSubmit)="submit(adddoc)" #fm="ngForm">
-            <div class="modal-body">
-              <div class="form-group row">
-               
-                <label for="BrandName" class="col-sm-4 col-form-label">Document Type Name</label>
-            
-            <div class="col-sm-8">
-                <input type="text" class="form-control" id="DocumentTypeName" [(ngModel)]="adddoc.Documenttypename" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
-                  pattern='[A-Za-z\\s]*' name="DocumentTypeName" aria-describedby="productname" placeholder="Enter Document Type Name"
-                  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && DocumentTypeName.invalid }"  required />
-                </div>
-              </div>
-              <div class="form-group row">
-               
-                <label for="BrandName" class="col-sm-4 col-form-label">Document Type Prefix</label>
-            
-            <div class="col-sm-8">
-                <input type="text" class="form-control" id="DocumentTypePrefix" [(ngModel)]="adddoc.documenttypeprefix" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
-                  pattern='[A-Za-z\\s]*' name="DocumentTypePrefix" aria-describedby="productname" placeholder="Enter Document Prefix Name"
-                  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && DocumentTypePrefix.invalid }"  required />
-                </div>
-              </div>
-              <div class="form-group row">
-               
-                <label for="BrandName" class="col-sm-4 col-form-label">Description</label>
-            
-            <div class="col-sm-8">
-                <input type="textbox" class="form-control" id="Description" [(ngModel)]="adddoc.Description" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
-                  pattern='[A-Za-z\\s]*' name="Description" aria-describedby="productname" placeholder="Enter Description"
-                  #BrandName="ngModel" [ngClass]="{ 'is-invalid': fm.submitted && Description.invalid }"  required />
-                </div>
-              </div>
-              <div class="form-group row">
-               
-                <label for="BrandName" class="col-sm-4 col-form-label">Assign to Department</label>
-            
-            <div class="col-sm-8">
-                <select class="form-control" [(ngModel)]="adddoc.Assigntodepartment" name="Assigntodepartment"  id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
-            [ngClass]="{ 'is-invalid': fm.submitted && Assigntodepartment.invalid }" required>
-            <option value="Select">Select</option>
-            <option *ngFor="let type of types" value={{type.DepartmentName}}>{{type?.DepartmentName}}</option>
-          </select>
-                
-                </div>
-               
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-success" (click)="closepopup();" *ngIf="viewMode">Approve</button>
-              <button type="button" class="btn btn-info" (click)="closepopup();" *ngIf="viewMode">Re-Initiate</button>
-              <button type="button" class="btn btn-danger" (click)="closepopup();" *ngIf="viewMode">Reject</button>
-              <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
-              <button type="submit" class="btn btn-primary"  *ngIf="!viewMode">Submit</button>
-            </div>
-          </form>
-        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" (click)="closepopup();" *ngIf="viewMode">Approve</button>
+        <button type="button" class="btn btn-info" (click)="closepopup();" *ngIf="viewMode">Re-Initiate</button>
+        <button type="button" class="btn btn-danger" (click)="closepopup();" *ngIf="viewMode">Reject</button>
+        <button type="button" class="btn btn-secondary" (click)="closepopup();">Close</button>
+        <button type="submit" class="btn btn-primary" *ngIf="!viewMode">Submit</button>
+      </div>
+    </form>
+  </div>
 </div>
