--- a/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-effective/document-effective.component.html
@@ -40,7 +40,7 @@
             <td>
               <button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTCId"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
-                <span class="fa fa-edit" [routerLink]="['/mainpage/documentmanager/documenprepadd']"></span>
+                <span class="fa fa-edit"></span>
               </button>
             </td>
           </tr>
