--- a/VlimsWeb/ClientApp/src/app/document-template-config/document-template-config.component.html
+++ b/VlimsWeb/ClientApp/src/app/document-template-config/document-template-config.component.html
@@ -36,7 +36,7 @@
 
             <td>Success</td>
             <td>              
-              <button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
+              <button class="btn"> <span class="fa fa-edit" (click)="editdoc(doc);"></span></button>
             </td>
           </tr>
         </tbody>
