document manager changes

--- a/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
+++ b/VlimsWeb/ClientApp/src/app/add-document-request/add-document-request.component.html
@@ -14,11 +14,10 @@
 
           <div class="col-sm-8">
 
-            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="documenttype" #typeId="ngModel"
-                    [ngClass]="{ 'is-invalid': fm.submitted && typeId.invalid }" required>
-              
+            <select class="form-control" [(ngModel)]="adddocreq.documenttype" name="documenttype" #typeId="ngModel">
+
               <option value="Select">Select</option>
-              <option *ngFor="let type of doctypes" value={{type.Documenttypename}}>{{type?.Documenttypename}}</option>
+              <option *ngFor="let doctype of doctypes" value={{doctype.Documenttypename}}>{{doctype?.Documenttypename}}</option>
             </select>
           </div>
         </div>
@@ -29,10 +28,9 @@
 
           <div class="col-sm-8">
 
-            <select class="form-control" [(ngModel)]="adddocreq.Assigntodepartment" name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event"
-                    [ngClass]="{ 'is-invalid': fm.submitted && Assigntodepartment.invalid }" required>
+            <select class="form-control" [(ngModel)]="adddocreq.Assigntodepartment" name="Assigntodepartment" id="Assigntodepartment" [disabled]="viewMode" (ngModelChange)="inputValue = $event">
               <option value="Select">Select</option>
-              <option *ngFor="let type of departs" value={{type.DepartmentName}}>{{type?.DepartmentName}}</option>
+              <option *ngFor="let dept of departs" value={{dept.DepartmentName}}>{{dept?.DepartmentName}}</option>
             </select>
 
           </div>
