--- a/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
+++ b/VlimsWeb/ClientApp/src/app/usergroupconfiguration/usergroupconfiguration.component.html
@@ -13,7 +13,7 @@
   <div class="card-body">
 
     <div class="table-responsive">
-      <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0">
+      <!--<table class="table table-bordered" id="dataTable" width="100%" cellspacing="0" *ngIf="types?.length>   0">
 
         <thead>
           <tr>
@@ -38,17 +38,17 @@
             <td>{{doc?.ModifiedDate | date}}</td>
 
             <td>Success</td>
-            <td>
+            <td>-->
               <!--<button class="btn" data-toggle="modal" data-target="#exampleModal" [id]="doc.DTID"
                       data-backdrop="static" data-keyboard="false" (click)="editBrand(doc);">
                 <span class="fa fa-flag fa-wrench"></span>
               </button>-->
-              <button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
+              <!--<button class="btn"> <span class="fa fa-edit" (click)="deleteBrand(i,doc);"></span></button>
             </td>
           </tr>
         </tbody>
 
-      </table>
+      </table>-->
 
     </div>
 
